# ChangeLog for net-irc/ezbounce
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/ezbounce/ChangeLog,v 1.13 2008/02/25 15:26:51 armin76 Exp $

*ezbounce-1.99.11 (25 Feb 2008)

  25 Feb 2008; Raúl Porcel <armin76@gentoo.org> +ezbounce-1.99.11.ebuild:
  Version bump

*ezbounce-1.99.10 (04 Feb 2008)

  04 Feb 2008; Dawid Węgliński <cla@gentoo.org> +ezbounce-1.99.10.ebuild:
  Version bump, bug #207570

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org> ezbounce-1.04c.ebuild,
  ezbounce-1.99.9.ebuild:
  Fix HOMEPAGE

*ezbounce-1.99.9 (10 Oct 2007)

  10 Oct 2007; Dawid Węgliński <cla@gentoo.org> +ezbounce-1.99.9.ebuild:
  Version bump for bug #193053

*ezbounce-1.04c (10 Apr 2007)

  10 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  -files/ezbounce-1.04a-c++.patch, -files/ezbounce-1.04a-crash-fix.patch,
  -ezbounce-1.04a.ebuild, +ezbounce-1.04c.ebuild:
  Version bump, drop old
