@@ -1,10 +1,6 @@
 DIST ezbounce-1.04c.tar.gz 192630 RMD160 b5c35757a5b6cfab26177f3dcadd3aa0d1e3caac SHA1 9770609f4575a6e09173d2132f2a66f536956a86 SHA256 5be7b903e3682aee9d1758f60957486e4aa08da717fc763caab1415454eaebd8
-DIST ezbounce-1.99.10.tar.gz 395098 RMD160 a4d28a78a0f4c35b6e167853810177452d1e212e SHA1 2b729bfed8015a8a7bd5cc786523511bc71ec087 SHA256 5ab1e2a5352eeebd4692aa091700aa32d3e25e8fec0ac107f36e298315c8d1ce
-DIST ezbounce-1.99.11.tar.gz 398304 RMD160 9978e91b21c2a8423a4f15eee48c05452ed249ba SHA1 04155ddc3ecfa3ed31bc8635bf77ef07c5c76b94 SHA256 13e43b0973fd3f2736f832bca5c9a65deffbd047609853686f4ef15413535f34
-DIST ezbounce-1.99.9.tar.gz 392578 RMD160 318a938a57fec46a75cdec927c6995e15f961edc SHA1 cafb9df2be575c3be5263e9b5061528b027f9c1b SHA256 48eeaf18fba6fb4f5eed62cc7ec0e36f1fe5769128d86352e04210121ac3622e
+DIST ezbounce-1.99.13.tar.gz 428335 RMD160 915f686861aadddbaed2d3bc8305c835479a953e SHA1 811adc6099a908b09ae0d7acfcb583ec27032b45 SHA256 da858b3218e3516b988865baebcbf566fc0e6ac0b064616d1b5079187334df70
 EBUILD ezbounce-1.04c.ebuild 749 RMD160 ce942fac6a80b2ec5a7fd2a7f1c96701ba8530ed SHA1 c75e79fc9e57290df64bf19bfd05359b76fe34a1 SHA256 6af842f6a81f40def8d36d8f5db1480bc16750f45f0cdcf3e132d1037bd10e2a
-EBUILD ezbounce-1.99.10.ebuild 806 RMD160 b81d3238ba3829529a89735e7bd392d99dfbdc30 SHA1 90f4f071b8ea161e84faa5360666583d3a260e32 SHA256 857a67f93943a5a1b0c772b6c643ba6391a67cac1972a327ee0f4abd586665bf
-EBUILD ezbounce-1.99.11.ebuild 810 RMD160 cf350c26a70cff2208f7edee4737c5afe10ec3b1 SHA1 bd6756cc9d301d4395b62d3e433a360d203de60a SHA256 8b9f25f071ff63562fb312de4652e70b1715d3dbe71e80c7d9f1f47229483183
-EBUILD ezbounce-1.99.9.ebuild 809 RMD160 ac47f1c5324a60ed281d938a6ee8abe962ed4383 SHA1 7a45ad19747f868d2687fcffa4ecb2584bc4240c SHA256 57536e6d79eaff664cdbb46ee88fb35c0c62f7058c3561dacdfa16e52c5b1134
-MISC ChangeLog 952 RMD160 1c80cf7ebd90747f278417b34b13a10258967ac8 SHA1 45017176aead57205472bf3e7059f0eba65a4f6c SHA256 e49682d69491a5c5357e62034f10ccc9983c0158fd6f7d1fba4e78efff2054bb
+EBUILD ezbounce-1.99.13.ebuild 826 RMD160 6da846fa42fd5727510cd7ba112c43e9795d7f1f SHA1 10f58131880bce9ac565dac9c12880ed6a71923a SHA256 dc8812342c24381276fa6c9c202a4b535c521f51b6f0eb20365f5687578888e9
+MISC ChangeLog 1169 RMD160 46ea33eea183b8667d00a5015711b86aaef4c4af SHA1 a32e001de751ffccbb83d6d347a1ca35f97199c9 SHA256 dc5f22187c2f55a70a52baffd63ffe79151be7df4b680f422d184c7a67337b64
 MISC metadata.xml 160 RMD160 279429d1df694561fc2b163cb81c09387b9d940c SHA1 97da1b72eecc5585c65717da08eaccc9bc1cf7cd SHA256 5e058419199e306612929b80a996e3d16c6b20de674a56bb60558d3d36524fe2
