@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ezbounce/ezbounce-1.99.10.ebuild,v 1.1 2008/02/04 11:03:17 cla Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ezbounce/ezbounce-1.99.13.ebuild,v 1.1 2008/05/02 15:42:18 armin76 Exp $
 
 inherit eutils
 
@@ -12,6 +12,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="ssl boost"
+RESTRICT="test"
 
 DEPEND=">=net-misc/mdidentd-1.04c
 	ssl? ( dev-libs/openssl )
