@@ -2,6 +2,6 @@ AUX ngircd.init.d 535 RMD160 4b0213c343d27690b589807c74bdafc38cb03dff SHA1 fc6fe
 DIST ngircd-0.11.0.tar.gz 322352 RMD160 1707fdd6d5d87243084d7461ed9106c7c16d1791 SHA1 759e0eb95ef0e49648e059e9c83c31eed1084e83 SHA256 d2c40275a8e234f57eb4c76d1476c2fca73d66bdec2842fd91aa06b2b071ced4
 DIST ngircd-0.11.1.tar.gz 322562 RMD160 4359d0821cba90172621771e9a8fceebcd96196e SHA1 e0fc78ecd02a48e134dbb5932503cd498221d002 SHA256 b7cd0e7cb7d5d40e07d16e06e5348d3b0000d39a1efcfe877d6d064a56da282a
 EBUILD ngircd-0.11.0.ebuild 1332 RMD160 f5cf48ae1ca3dc155082ebb119e890c411cc586e SHA1 8933d3525e065e8891ac243d47dfb7a56fe99e92 SHA256 292cba369469e13bcf503bce1ff32fc4e3202d4c8b596d493dd79b0088bb5467
-EBUILD ngircd-0.11.1.ebuild 1335 RMD160 2c08143f55711ae2ef2b17bd93fa026fb95a6b0a SHA1 4991440298a424d6268d8f3931b92790cb503bb6 SHA256 612a9ac8d6ca43d0b2ef7ba426992679f64c175720db8ed811297b0876e15a81
-MISC ChangeLog 4920 RMD160 e39639a70f81695206393b6732ad9871c208cb27 SHA1 d9420d6d202c17be7e07072d60c314edf2cdca13 SHA256 49ab271667487088a052960687d64c9f03d07dd7505b33eebd11b381d4cd4093
+EBUILD ngircd-0.11.1.ebuild 1333 RMD160 9efc36706bb1bc2e0bc1fcdb84dd7885ca635530 SHA1 aeba01497eb34edc1aeb292038f046e01a46b3c8 SHA256 51b0444d70dcc64cf5db946a3e1e2c5e44b351df1647c580fda1f31a71244dc0
+MISC ChangeLog 5005 RMD160 c1d79aa56ce277772df3b2411dc19d59dc314bf8 SHA1 1e50f974a9ca54e480c54b109adddbc4f7cbd5b0 SHA256 7931c8c33f5d8a1ad671c4ff20032e34fa6f017665331aa011e8776f5a7a4e5c
 MISC metadata.xml 160 RMD160 279429d1df694561fc2b163cb81c09387b9d940c SHA1 97da1b72eecc5585c65717da08eaccc9bc1cf7cd SHA256 5e058419199e306612929b80a996e3d16c6b20de674a56bb60558d3d36524fe2
